<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="list_of_tasks">Список дел</string>
    <string name="more_info">Подробнее</string>
    <string name="done">Выполнить</string>
    <string name="task_name_required">Название задачи <font color='#FF0000'>*</font> </string>
    <string name="task_name">Название задачи</string>
    <string name="task_description">Описание задачи</string>
    <string name="add_task">Добавление</string>
    <string name="create_task">Добавить</string>
    <string name="manage_tasks">Управляй задачами</string>
    <string name="congratulations">Поздравляем! Задача выполнена</string>
    <string name="required_field">Не заполнено обязательно поле название задачи</string>
</resources>